Update css and html

--- a/index.html
+++ b/index.html
@@ -10,10 +10,18 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
+  <!-- My styles/files -->
   <link rel="stylesheet" href="css/styles.css">
 
   <link rel="icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/softbank/145/paw-prints_1f43e.png">
 
+  <!-- Google fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:100,400,900|Ubuntu&display=swap" rel="stylesheet">
+
+  <!--Font Awesome-->
+  <script src="https://kit.fontawesome.com/227c4e4a3b.js" crossorigin="anonymous"></script>
+
+  <!--Bootstrap-->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
@@ -21,43 +29,67 @@
 </head>
 
 <body>
+
   <section id="title">
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">
-        <img class="logo" src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/softbank/145/paw-prints_1f43e.png" alt="paws">
-        <span class="d-inline-block align-middle">Tincat</span>
-      </a>
 
-      <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarMain">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+    <div class="container-fluid">
 
-      <div class="collapse navbar-collapse" id="navbarMain">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><a href="" class="nav-link">Contact</a></li>
-          <li class="nav-item"><a href="" class="nav-link">Pricing</a></li>
-          <li class="nav-item"><a href="" class="nav-link">Download</a></li>
-        </ul>
+      <!--Navigation Bar-->
+      <nav class="navbar navbar-expand-sm navbar-dark">
+        <a class="navbar-brand" href="#">
+          <img class="logo" src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/softbank/145/paw-prints_1f43e.png" alt="paws">
+          <span class="d-inline-block align-middle">tincat</span>
+        </a>
+
+        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarMain">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarMain">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item"><a href="" class="nav-link">Contact</a></li>
+            <li class="nav-item"><a href="" class="nav-link">Pricing</a></li>
+            <li class="nav-item"><a href="" class="nav-link">Download</a></li>
+          </ul>
+        </div>
+      </nav>
+
+      <!--Title-->
+      <div class="row">
+        <div class="col-lg-6 text-main">
+          <h1>Meet new and interesting cats nearby.</h1>
+          <button type="button" class="download-button btn btn-lg btn-dark"><span class="fab fa-apple"></span>Download</button>
+          <button type="button" class="download-button btn btn-lg btn-outline-light"><span class="fab fa-google-play"></span>Download</button>
+        </div>
+        <div class="col-lg-6 image-main-container">
+          <img class="phone-app-preview" src="images/phone.png" alt="preview tincat dating app for cats">
+        </div>
       </div>
-    </nav>
 
-    <div>
-      <h1>Meet new and interesting cats nearby.</h1>
-      <button type="button">Download</button>
-      <button type="button">Download</button>
     </div>
-    <div>
-      <img class="phone-app-preview" src="images/phone.png" alt="preview tincat dating app for cats">
-    </div>
+
   </section>
 
   <section id="features">
-    <h3>Easy to use.</h3>
-    <p>So easy to use, even your cat could do it.</p>
-    <h3>Elite Clientele</h3>
-    <p>We have all the cats, the greatest cats.</p>
-    <h3>Guaranteed to work.</h3>
-    <p>Find the love of your cat's life or get your money back.</p>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-4">
+          <i class="feature-icon fas fa-check-circle fa-4x"></i>
+          <h3>Easy to use.</h3>
+          <p>So easy to use, even your cat could do it.</p>
+        </div>
+        <div class="col-lg-4">
+          <i class="feature-icon fas fa-bullseye fa-4x"></i>
+          <h3>Elite Clientele</h3>
+          <p>We have all the cats, the greatest cats.</p>
+        </div>
+        <div class="col-lg-4">
+          <i class="feature-icon fas fa-heart fa-4x"></i>
+          <h3>Guaranteed to work.</h3>
+          <p>Find the love of your cat's life or get your money back.</p>
+        </div>
+      </div>
+    </div>
   </section>
 
   <section id="testimonials">
