Update preview image link

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <button type="button" class="download-button btn btn-lg btn-outline-light"><span class="fab fa-google-play"></span>Download</button>
         </div>
         <div class="col-lg-6 image-main-container">
-          <img class="phone-app-preview" src="images/phone.png" alt="preview tincat dating app for cats">
+          <img class="phone-app-preview" src="https://raw.githubusercontent.com/alessandrovinciabc/tincat/master/images/phone.png" alt="preview tincat dating app for cats">
         </div>
       </div>
 
