--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
 <body>
 
+  <!-- Title -->
   <section id="title">
 
     <div class="container-fluid">
@@ -47,9 +48,9 @@
 
         <div class="collapse navbar-collapse" id="navbarMain">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item"><a href="" class="nav-link">Contact</a></li>
-            <li class="nav-item"><a href="" class="nav-link">Pricing</a></li>
-            <li class="nav-item"><a href="" class="nav-link">Download</a></li>
+            <li class="nav-item"><a href="#footer" class="nav-link">Contact</a></li>
+            <li class="nav-item"><a href="#pricing" class="nav-link">Pricing</a></li>
+            <li class="nav-item"><a href="#cta" class="nav-link">Download</a></li>
           </ul>
         </div>
       </nav>
@@ -59,17 +60,16 @@
         <div class="col-lg-6 text-main">
           <h1>Meet new and interesting cats nearby.</h1>
           <button type="button" class="download-button btn btn-lg btn-dark"><span class="fab fa-apple"></span>Download</button>
-          <button type="button" class="download-button btn btn-lg btn-outline-light"><span class="fab fa-google-play"></span>Download</button>
+          <button type="button" class="download-button btn btn-lg btn-light"><span class="fab fa-google-play"></span>Download</button>
         </div>
-        <div class="col-lg-6 image-main-container">
-          <img class="phone-app-preview" src="https://raw.githubusercontent.com/alessandrovinciabc/tincat/master/images/phone.png" alt="preview tincat dating app for cats">
+        <div class="col-lg-6">
+          <img class="phone-app-preview" src="images/phone.png" alt="preview tincat dating app for cats">
         </div>
       </div>
-
     </div>
-
   </section>
 
+  <!-- Features -->
   <section id="features">
     <div class="container-fluid">
       <div class="row">
@@ -92,53 +92,121 @@
     </div>
   </section>
 
+  <!-- Testimonial -->
   <section id="testimonials">
-    <h2>I no longer have to go to dangerous places. I've found the cutest cat ever. Meow.</h2>
-    <img src="images/smiling-cat.jpg" alt="picture of cat smiling">
-    <em>Sophie, London</em>
+
+    <div id="carouselTestimonial" class="carousel slide" data-interval="5000" data-ride="false" data-pause="hover">
+
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <h2 class="testimonial-text">I no longer have to go to dangerous places. I've found the cutest cat ever. Meow.</h2>
+          <img class="testimonial-image" src="images/smiling-cat.jpg" alt="cat smiling">
+          <em>Sophie, London</em>
+        </div>
+        <div class="carousel-item">
+          <h2 class="testimonial-text">My cat used to be so lonely, but with TinCat's help, they've found the love of their life. I think.</h2>
+          <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+          <em>Beverly, Illinois</em>
+        </div>
+      </div>
+
+      <a href="#carouselTestimonial" class="carousel-control-prev" data-slide="prev" role="button">
+        <span class="carousel-control-prev-icon"></span>
+      </a>
+      <a href="#carouselTestimonial" class="carousel-control-next" data-slide="next" role="button">
+        <span class="carousel-control-next-icon"></span>
+      </a>
+    </div>
+
   </section>
 
+  <!-- Press -->
   <section id="press">
-    <img src="images/TechCrunch.png" alt="TechCrunch logo">
-    <img src="images/tnw.png" alt="tnw logo">
-    <img src="images/bizinsider.png" alt="bizinsider logo">
-    <img src="images/mashable.png" alt="mashable logo">
+    <img class="press-logo" src="images/TechCrunch.png" alt="TechCrunch logo">
+    <img class="press-logo" src="images/tnw.png" alt="tnw logo">
+    <img class="press-logo" src="images/bizinsider.png" alt="bizinsider logo">
+    <img class="press-logo" src="images/mashable.png" alt="mashable logo">
   </section>
 
+  <!-- Pricing -->
   <section id="pricing">
-    <h2>A Plan for Every Cat's Needs</h2>
-    <p>Simple and affordable price plans for you and your cat.</p>
-    <h2>Free</h2>
-    <ul>
-      <li>5 Matches Per Day</li>
-      <li>10 Messages Per Day</li>
-      <li>Unlimited App Usage</li>
-    </ul>
-    <button type="button">Sign Up</button>
-    <h2>$49 / mo</h2>
-    <ul>
-      <li>Unlimited Matches</li>
-      <li>Unlimited Messages</li>
-      <li>Unlimited App Usage</li>
-    </ul>
-    <button type="button">Sign Up</button>
-    <h2>$99 / mo</h2>
-    <ul>
-      <li>Pirority Listing</li>
-      <li>Unlimited Matches</li>
-      <li>Unlimited Messages</li>
-      <li>Unlimited App Usage</li>
-    </ul>
-    <button type="button">Sign Up</button>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-12">
+          <h2>A Plan for Every Cat's Needs</h2>
+          <p>Simple and affordable price plans for you and your cat.</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="pricing-column col-lg-4 col-md-6">
+          <div class="card">
+            <div class="card-header">
+              <h3>Shortair</h3>
+            </div>
+            <div class="card-body">
+              <h2>Free</h2>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">5 Matches Per Day</li>
+                <li class="list-group-item">10 Messages Per Day</li>
+                <li class="list-group-item">Unlimited App Usage</li>
+              </ul>
+              <button type="button" class="btn btn-large btn-block btn-outline-dark">Sign Up</button>
+            </div>
+          </div>
+        </div>
+        <div class="pricing-column col-lg-4 col-md-6">
+          <div class="card">
+            <div class="card-header">
+              <h3>Persian</h3>
+            </div>
+            <div class="card-body">
+              <h2>$49 / mo</h2>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">Unlimited Matches</li>
+                <li class="list-group-item">Unlimited Messages</li>
+                <li class="list-group-item">Unlimited App Usage</li>
+              </ul>
+              <button type="button" class="btn btn-large btn-block btn-dark">Sign Up</button>
+            </div>
+          </div>
+        </div>
+        <div class="pricing-column col-lg-4">
+          <div class="card">
+            <div class="card-header">
+              <h3>Bengal</h3>
+            </div>
+            <div class="card-body">
+              <h2>$99 / mo</h2>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">Pirority Listing</li>
+                <li class="list-group-item">Unlimited Matches</li>
+                <li class="list-group-item">Unlimited Messages</li>
+                <li class="list-group-item">Unlimited App Usage</li>
+              </ul>
+              <button type="button" class="btn btn-large btn-block btn-dark">Sign Up</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 
+  <!-- Call to action -->
   <section id="cta">
-    <h3>Find the True Love of Your Cat's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <div class="container-fluid">
+      <h3 class="cta-header">Find the True Love of Your Cat's Life Today.</h3>
+      <button type="button" class="download-button btn btn-lg btn-dark"><span class="fab fa-apple"></span>Download</button>
+      <button type="button" class="download-button btn btn-lg btn-light"><span class="fab fa-google-play"></span>Download</button>
+    </div>
   </section>
 
+  <!-- Footer -->
   <footer id="footer">
+    <i class="footer-icon fab fa-twitter"></i>
+    <i class="footer-icon fab fa-facebook-f"></i>
+    <i class="footer-icon fab fa-instagram"></i>
+    <i class="footer-icon fas fa-envelope"></i>
     <p>© Copyright 2019 TinCat</p>
   </footer>
 
