--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <div class="pricing-column col-lg-4 col-md-6">
           <div class="card">
             <div class="card-header">
-              <h3>Shortair</h3>
+              <h3>Shorthair</h3>
             </div>
             <div class="card-body">
               <h2>Free</h2>
