--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
   <!-- Pricing -->
   <section id="pricing">
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-12">
           <h2>A Plan for Every Cat's Needs</h2>
