Refactor html and css

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
 
   <!-- Title -->
-  <section id="title">
+  <section class="colored-section" id="title">
 
     <div class="container-fluid">
 
@@ -55,10 +55,10 @@
         </div>
       </nav>
 
-      <!--Title-->
+      <!--Title Text and Image-->
       <div class="row">
-        <div class="col-lg-6 text-main">
-          <h1>Meet new and interesting cats nearby.</h1>
+        <div class="col-lg-6 text-main-container">
+          <h1 class="title-header">Meet new and interesting cats nearby.</h1>
           <button type="button" class="download-button btn btn-lg btn-dark"><span class="fab fa-apple"></span>Download</button>
           <button type="button" class="download-button btn btn-lg btn-light"><span class="fab fa-google-play"></span>Download</button>
         </div>
@@ -70,22 +70,22 @@
   </section>
 
   <!-- Features -->
-  <section id="features">
+  <section class="white-section" id="features">
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-4">
           <i class="feature-icon fas fa-check-circle fa-4x"></i>
-          <h3>Easy to use.</h3>
+          <h3 class="feature-header">Easy to use.</h3>
           <p>So easy to use, even your cat could do it.</p>
         </div>
         <div class="col-lg-4">
           <i class="feature-icon fas fa-bullseye fa-4x"></i>
-          <h3>Elite Clientele</h3>
+          <h3 class="feature-header">Elite Clientele</h3>
           <p>We have all the cats, the greatest cats.</p>
         </div>
         <div class="col-lg-4">
           <i class="feature-icon fas fa-heart fa-4x"></i>
-          <h3>Guaranteed to work.</h3>
+          <h3 class="feature-header">Guaranteed to work.</h3>
           <p>Find the love of your cat's life or get your money back.</p>
         </div>
       </div>
@@ -93,43 +93,48 @@
   </section>
 
   <!-- Testimonial -->
-  <section id="testimonials">
+  <section class="colored-section" id="testimonials">
 
-    <div id="carouselTestimonial" class="carousel slide" data-interval="5000" data-ride="false" data-pause="hover">
+    <div class="container-fluid">
+      <div id="carouselTestimonial" class="carousel slide" data-interval="5000" data-ride="false" data-pause="hover">
 
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <h2 class="testimonial-text">I no longer have to go to dangerous places. I've found the cutest cat ever. Meow.</h2>
-          <img class="testimonial-image" src="images/smiling-cat.jpg" alt="cat smiling">
-          <em>Sophie, London</em>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <h2 class="testimonial-text">I no longer have to go to dangerous places. I've found the cutest cat ever. Meow.</h2>
+            <img class="testimonial-image" src="images/smiling-cat.jpg" alt="cat smiling">
+            <em>Sophie, London</em>
+          </div>
+          <div class="carousel-item">
+            <h2 class="testimonial-text">My cat used to be so lonely, but with TinCat's help, they've found the love of their life. I think.</h2>
+            <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+            <em>Beverly, Illinois</em>
+          </div>
         </div>
-        <div class="carousel-item">
-          <h2 class="testimonial-text">My cat used to be so lonely, but with TinCat's help, they've found the love of their life. I think.</h2>
-          <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-          <em>Beverly, Illinois</em>
-        </div>
+
+        <a href="#carouselTestimonial" class="carousel-control-prev" data-slide="prev" role="button">
+          <span class="carousel-control-prev-icon"></span>
+        </a>
+        <a href="#carouselTestimonial" class="carousel-control-next" data-slide="next" role="button">
+          <span class="carousel-control-next-icon"></span>
+        </a>
       </div>
-
-      <a href="#carouselTestimonial" class="carousel-control-prev" data-slide="prev" role="button">
-        <span class="carousel-control-prev-icon"></span>
-      </a>
-      <a href="#carouselTestimonial" class="carousel-control-next" data-slide="next" role="button">
-        <span class="carousel-control-next-icon"></span>
-      </a>
     </div>
+
 
   </section>
 
   <!-- Press -->
-  <section id="press">
-    <img class="press-logo" src="images/TechCrunch.png" alt="TechCrunch logo">
-    <img class="press-logo" src="images/tnw.png" alt="tnw logo">
-    <img class="press-logo" src="images/bizinsider.png" alt="bizinsider logo">
-    <img class="press-logo" src="images/mashable.png" alt="mashable logo">
+  <section class="colored-section" id="press">
+    <div class="container-fluid">
+      <img class="press-logo" src="images/TechCrunch.png" alt="TechCrunch logo">
+      <img class="press-logo" src="images/tnw.png" alt="tnw logo">
+      <img class="press-logo" src="images/bizinsider.png" alt="bizinsider logo">
+      <img class="press-logo" src="images/mashable.png" alt="mashable logo">
+    </div>
   </section>
 
   <!-- Pricing -->
-  <section id="pricing">
+  <section class="white-section" id="pricing">
     <div class="container-fluid">
       <div class="row">
         <div class="col-12">
@@ -142,7 +147,7 @@
         <div class="pricing-column col-lg-4 col-md-6">
           <div class="card">
             <div class="card-header">
-              <h3>Shorthair</h3>
+              <h3 class="pricing-plan">Shorthair</h3>
             </div>
             <div class="card-body">
               <h2>Free</h2>
@@ -158,7 +163,7 @@
         <div class="pricing-column col-lg-4 col-md-6">
           <div class="card">
             <div class="card-header">
-              <h3>Persian</h3>
+              <h3 class="pricing-plan">Persian</h3>
             </div>
             <div class="card-body">
               <h2>$49 / mo</h2>
@@ -174,7 +179,7 @@
         <div class="pricing-column col-lg-4">
           <div class="card">
             <div class="card-header">
-              <h3>Bengal</h3>
+              <h3 class="pricing-plan">Bengal</h3>
             </div>
             <div class="card-body">
               <h2>$99 / mo</h2>
@@ -193,7 +198,7 @@
   </section>
 
   <!-- Call to action -->
-  <section id="cta">
+  <section class="colored-section" id="cta">
     <div class="container-fluid">
       <h3 class="cta-header">Find the True Love of Your Cat's Life Today.</h3>
       <button type="button" class="download-button btn btn-lg btn-dark"><span class="fab fa-apple"></span>Download</button>
@@ -202,7 +207,7 @@
   </section>
 
   <!-- Footer -->
-  <footer id="footer">
+  <footer class="white-section" id="footer">
     <i class="footer-icon fab fa-twitter"></i>
     <i class="footer-icon fab fa-facebook-f"></i>
     <i class="footer-icon fab fa-instagram"></i>
